--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Calculadora de Porcentagem</h1>
 
         <label for="valor">Insira o Valor:</label>
-        <input type="number" id="valor" placeholder="Ex: 2.99 ou 100.00" min="0" step="0.01">
+        <input type="number" id="valor" placeholder="Ex: 2.99 ou 100.00" min="0" step="0.01" autofocus>
 
         <div class="buttons">
             <button id="btn50">50%</button>
@@ -31,3 +31,4 @@
 
 
 </html>
+
