Refactor index.html for calculator layout and content

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,35 +10,51 @@
 </head>
 
 <body>
-  <div class="page-wrapper">
-    <main class="card">
-        <h1>Calculadora de Porcentagem</h1>
+  <!-- CARD 1: PORCENTAGEM -->
+  <main class="card">
+    <h1>Calculadora de Porcentagem</h1>
 
-        <label for="valor">Insira o Valor:</label>
-        <input type="number" id="valor" placeholder="Ex: 2.99 ou 100.00" min="0" step="0.01">
+    <label for="valor">Insira o Valor:</label>
+    <input type="number" id="valor" placeholder="Ex: 2.99 ou 100.00" min="0" step="0.01" autofocus>
 
-        <div class="buttons">
-            <button id="btn50">50%</button>
-            <button id="btn30">30%</button>
-        </div>
+    <div class="buttons">
+      <button id="btn50">50%</button>
+      <button id="btn30">30%</button>
+    </div>
 
-        <div id="resultado" class="result">
-            <div class="desc">O resultado aparecerá aqui.</div>
-            <div class="value"></div>
-        </div>
-    </main>
-  </div>
+    <div id="resultado" class="result">
+      <div class="desc">O resultado aparecerá aqui.</div>
+      <div class="value"></div>
+    </div>
+  </main>
+
+  <!-- CARD 2: GIRO -->
+  <main class="card">
+    <h1>Calculadora de Giro</h1>
+
+    <label for="valorGiro">Insira o Valor:</label>
+    <input type="number" id="valorGiro" placeholder="Ex: 0.033 ou 0.066" min="0" step="0.01">
+
+    <div class="buttons">
+      <button id="btnGiro">Calcular Giro</button>
+    </div>
+
+    <div id="resultadoGiro" class="result">
+      <div class="desc">O resultado aparecerá aqui.</div>
+      <div class="value"></div>
+    </div>
+  </main>
 
   <footer>
     <div class="footer-content">
-      <p>&copy; 2025 Calculadora de Porcentagem. Todos os direitos reservados.</p>
+      <p>&copy; 2025 Calculadoras. Todos os direitos reservados.</p>
       <div class="footer-links">
-        <a href="#sobre">Sobre</a>
-        <a href="#contato">Contato</a>
+        <a href="https://lucas5963.github.io/Social-midias/">Contato</a>
       </div>
     </div>
   </footer>
 
   <script src="script.js"></script>
 </body>
+
 </html>
